2007-06-25  Francis Kung  <fkung@redhat.com>

	* patches/icedtea-graphics.patch: Enable compilation of
	sun.dc.DuctusRenderingEngine.
	* rt/sun/dc/pr/PathStroker.java: Add constructor.
	* rt/sun/dc/pr/Rasterizer.java: Implement AATilGenerator interface
	and stub necessary methods.

2007-06-25  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* Makefile.am (OPENJDK_VERSION): New variable.
	(OPENJDK_DATE): Likewise.
	(OPENJDK_SRC_ZIP): Use new variables.
	* Makefile.in: Regenerate.

2007-06-25  Francis Kung  <fkung@redhat.com>

	* Makefile.am: Upgrade to OpenJDK b14.
	* generated/sun/util/CoreResourceBundleControl.java: Regenerated.
	* patches/icedtea-copy-plugs.patch: Update line numbers for b14.
	* patches/icedtea-ports.patch: Likewise.
	* patches/icedtea-speed.patch: Likewise.
	* patches/icedtea-gcc.patch: New file.
	* Makefile.in: Regenerated.

2007-06-25  Kyle Galloway <kgallowa@redhat.com>

	* acinclude.m4: Autodetect jars and ecj on different distributions.
	* Makefile.am: Fix for case where javac is used.
	* Makefile.in: Regenerated.
	* configure: Ditto.

2007-06-22  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* .hgignore: Update.
	* patches/icedtea-copy-plugs.patch: Remove SnmpSession sections.
	* rt/com/sun/jmx/snmp/SnmpSession.java: Move to...
	* rt/com/sun/jmx/snmp/daemon/SnmpSession.java: New file.

2007-06-22  Francis Kung  <fkung@redhat.com>

	* patches/icedtea-graphics.patch: Remove debug messages.
	* rt/java/awt/color/ICC_Profile.java: Likewise.

2007-06-22  Francis Kung  <fkung@redhat.com>

	* patches/icedtea-ecj-bootstrap.patch: Patch ToBin.java file.
	* patches/icedtea-graphics.patch: Stub out Tracker and Stealer
	code in sun.awt.image.SunWritableRaster.
	* rt/java/awt/color/ICC_Profile.java: Modify for use with Sun's
	pluggable colour management and LittleCMS.
	* rt/java/awt/image/Raster.java: Create Sun-specific Rasters.
	* rt/java/awt/image/WritableRaster.java: Likewise.

2007-06-22  Francis Kung  <fkung@redhat.com>

	* Makefile.in: Regnerated.
