@@ -1,3 +1,12 @@
+2007-06-25  Kyle Galloway  <kgallowa@redhat.com>
+
+	* rt/java/awt/color/ICC_Profile.java(isRGBProfile): Add tags parameter to
+	allow tags to be checked by this method in Java code.
+	(isGreyProfile): Ditto.
+	(createTags): New method.
+	(getInstance): Call createTags to create tags then pass to isXXXXProfile
+	functions.
+
 2007-06-25  Francis Kung  <fkung@redhat.com>
 
 	* patches/icedtea-graphics.patch: Enable compilation of
